test/files/neg/macro-cyclic.check
Impls_Macros_1.scala:5: error: could not find implicit value for parameter e: SourceLocation
    c.universe.reify { implicitly[SourceLocation] }
                                 ^
one error found
